--- a/cypress/scripts/src/scss/core.scss
+++ b/cypress/scripts/src/scss/core.scss
@@ -4,12 +4,13 @@ body {
     overflow: auto;
 }
 
-#trigger {
+#target {
     display: inline-block;
     margin: auto;
     width: 300px;
-    height: 700px;
+    height: 400px;
     margin: 100px;
+    margin-bottom: 1000px;
     overflow: auto;
     background-color: #f1f1f1;
 }
@@ -50,9 +51,21 @@ body {
     margin-bottom: 250px;
 }
 
-@for $i from 1 through 5 {
+@for $i from 1 through 10 {
     .mt-#{$i}00 {
         margin-top: #{$i}00px !important;
+    }
+
+    .mb-#{$i}00 {
+        margin-bottom: #{$i}00px !important;
+    }
+
+    .mr-#{$i}00 {
+        margin-right: #{$i}00px !important;
+    }
+
+    .ml-#{$i}00 {
+        margin-left: #{$i}00px !important;
     }
 
     .h-#{$i}00 {
